# controllers/userController.js
@@ -56,7 +56,7 @@ exports.createUser = async (req, res) => {
 exports.editUser = async (req, res) => {
   try {
     const updatedUser = await userServices.editUser(req.params, req.body);
-    res.status(200).json(updatedUser);
+    res.status(201).json(updatedUser);
   } catch (err) {
     console.error('❌ Error updating user:', err);
     const statusCode = err.statusCode || 500;
