# swagger.json
@@ -86,8 +86,7 @@
         ],
         "responses": {
           "200": { "description": "Користувача знайдено" },
-          "400": { "description": "Відсутні поля для оновлення" },
-          "404": { "description": "Завдання не знайдено" }
+          "404": { "description": "Користувача не знайдено" }
         }
       },
       "put": {
@@ -116,7 +115,7 @@
           }
         },
         "responses": {
-          "200": { "description": "Користувача оновлено" },
+          "201": { "description": "Користувача оновлено" },
           "400": { "description": "Відсутні поля для оновлення" },
           "404": { "description": "Користувача не знайдено" }
         }
@@ -284,8 +283,9 @@
           }
         },
         "responses": {
-          "200": { "description": "Завдання оновлено" },
-          "404": { "description": "Завдання оновлено" }
+          "201": { "description": "Завдання оновлено" },
+          "400": { "description": "Відсутні поля для оновлення" },
+          "404": { "description": "Завдання не знайдено" }
         }
       },
       "delete": {
